# rust-coverage-http

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.local  README.md  TECHNICAL.md  k8s-deployment.yaml  kind-config.yaml
.github/workflows/: test-kind.yml
coverage-client/: Cargo.toml
coverage-client/src/: lib.rs  main.rs
coverage-server/: Cargo.toml
coverage-server/src/: lib.rs
example-app/: Cargo.toml
example-app/src/: main.rs
