[package]
name = "coverage-client"
version = "0.1.0"
edition = "2021"
description = "Client library for collecting Rust code coverage from Kubernetes pods"
license = "Apache-2.0"

[[bin]]
name = "coverage-client"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
which = "7"
