[package]
name = "coverage-server"
version = "0.1.0"
edition = "2021"
description = "Embedded HTTP server for collecting Rust code coverage from running applications"
license = "Apache-2.0"

[dependencies]
axum = "0.8"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net"] }
tracing = "0.1"
