[package]
name = "example-app"
version = "0.1.0"
edition = "2021"
description = "Example application demonstrating coverage-server integration"
license = "Apache-2.0"

[features]
coverage = ["dep:coverage-server"]

[dependencies]
axum = "0.8"
coverage-server = { path = "../coverage-server", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
